fixing header footer scrollbar

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+.body{
+    overflow: hidden;
+    background-color: rgb(20 25 34);
+}
+
 /* background: rgb(0 0 0); sidebar
 rgb(8 11 18); nav top
 background: rgb(20 25 34); main
@@ -46,6 +51,7 @@ aside .logo-wrapper{
     display: flex;
     align-items: center;
     cursor: pointer;
+    overflow: visible;
 }
 
 .icon-wrapper:active{
@@ -161,8 +167,8 @@ hr{
 
 header{
     /* height: 10vh; */
-    width: 86vw;
-    background-color: rgb(8, 11, 18);
+    width: 88vw;
+    background-color: rgba(8, 11, 18, 0.6 );
     z-index: 2;
     display: flex;
     justify-content: flex-end;
@@ -175,7 +181,7 @@ header{
 header button{
     background-color: rgb(8, 11, 18);
     padding: 0.6rem 1.2rem;
-    margin-right: 0.8rem;
+    margin-right: 3rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
     text-transform: uppercase;
@@ -196,20 +202,21 @@ header button:hover{
 /* main section start */
 
 main{
-    /* height: 100vh; */
+    /* height: 88vh; */
     width: 100vw;
     background-color: rgb(20 25 34);
     display: flex;
     flex-shrink: 2;
     flex-direction: column;
     overflow: auto;
-    position: relative;
+    padding-bottom: 8rem;
+    /* position: absolute; */
 }
 
 .main-nav > ul{
     display: flex;
     justify-content: center;
-    margin-top: 1rem;
+    margin-top: 5rem;
 }
 
 .main-nav li{
@@ -238,7 +245,7 @@ main{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    overflow-y: auto;
+    /* overflow-y: auto; */
 
 }
 
@@ -301,7 +308,7 @@ footer{
     position: fixed;
     left: 0;
     bottom: 0;
-    overflow-y: hidden;
+    overflow: hidden;
     justify-content: space-between;
     align-items: center;
     z-index: 2;
@@ -372,7 +379,7 @@ footer{
 }
 
 .footer-center-bottom > input{
-    width: 400px;
+    width: 30vw;
     margin-top: 0.5rem;
 }
 
@@ -384,7 +391,7 @@ footer{
 }
 
 .footer-right-icons > input{
-    width: 100px;
+    width: 30%;
     margin-top: 0.5rem;
     margin-right: 0.5rem;
 }
